1A/tob/tps/.svn/pristine/e7/e779bc99e1afa96f80bd22b9b60c5c361bce79f2.svn-base
allumettes/Arbitre.java:2: error: package org.junit does not exist
import static org.junit.Assert.*;
                       ^
1 error
